[package]
name = "intruder-alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.33.0"
libc = "0.2.140"
etherparse = "0.13.0"
rayon = "1.7.0"
tokio = { version = "1", features = ["full"] }
termion = "2.0.1"