[package]
name = "intruder-alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "alert"
path = "src/alert.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
pnet = "0.33.0"
libc = "0.2.140"
etherparse = "0.12.0"
rayon = "1.7.0"
tokio = { version = "1", features = ["full"] }
termion = "2.0.1"
notify-rust = "4.8.0"